@@ -8,12 +8,14 @@ package neqsim.thermo.component;
 import neqsim.thermo.phase.PhaseInterface;
 
 /**
+ * <p>
+ * ComponentSolid class.
+ * </p>
  *
  * @author esol
- * @version
+ * @version $Id: $Id
  */
 public class ComponentSolid extends ComponentSrk {
-
     private static final long serialVersionUID = 1000;
 
     double dpdt = 1.0;
@@ -25,25 +27,40 @@ public class ComponentSolid extends ComponentSrk {
     double pureCompFug = 0.0;
 
     /**
-     * Creates new SolidComponent
+     * <p>
+     * Constructor for ComponentSolid.
+     * </p>
      */
-    public ComponentSolid() {
-    }
+    public ComponentSolid() {}
 
-    public ComponentSolid(String component_name, double moles, double molesInPhase, int compnumber) {
+    /**
+     * <p>
+     * Constructor for ComponentSolid.
+     * </p>
+     *
+     * @param component_name a {@link java.lang.String} object
+     * @param moles a double
+     * @param molesInPhase a double
+     * @param compnumber a int
+     */
+    public ComponentSolid(String component_name, double moles, double molesInPhase,
+            int compnumber) {
         super(component_name, moles, molesInPhase, compnumber);
     }
 
     /**
+     * {@inheritDoc}
+     *
      * Uses Claperyons equation to calculate the solid fugacity
      */
     @Override
-	public double fugcoef(PhaseInterface phase1) {
+    public double fugcoef(PhaseInterface phase1) {
         // dfugdt(phase, phase.getNumberOfComponents(), phase.getTemperature(),
         // phase.getPressure());
-//        return fugcoef(phase, phase.getNumberOfComponents(), phase.getTemperature(), phase.getPressure());
+        // return fugcoef(phase, phase.getNumberOfComponents(), phase.getTemperature(),
+        // phase.getPressure());
         if (!solidCheck) {
-//            return 1.0e20;
+            // return 1.0e20;
         }
         if (componentName.equals("methane")) {
             return 1e30;
@@ -52,13 +69,22 @@ public class ComponentSolid extends ComponentSrk {
         // return fugcoef(phase1.getTemperature(), phase1.getPressure());
     }
 
+    /**
+     * <p>
+     * fugcoef2.
+     * </p>
+     *
+     * @param phase1 a {@link neqsim.thermo.phase.PhaseInterface} object
+     * @return a double
+     */
     public double fugcoef2(PhaseInterface phase1) {
         refPhase.setTemperature(phase1.getTemperature());
         refPhase.setPressure(phase1.getPressure());
         refPhase.init(refPhase.getNumberOfMolesInPhase(), 1, 1, 0, 1.0);
         refPhase.getComponent(0).fugcoef(refPhase);
 
-        double liquidPhaseFugacity = refPhase.getComponent(0).getFugasityCoefficient() * refPhase.getPressure();
+        double liquidPhaseFugacity =
+                refPhase.getComponent(0).getFugasityCoefficient() * refPhase.getPressure();
 
         // Calculates delta Cp solid-liquid
         double deltaCpSL = -(getPureComponentCpSolid(getTriplePointTemperature())
@@ -87,11 +113,15 @@ public class ComponentSolid extends ComponentSrk {
         // System.out.println("liquid density " + 1.0/liqMolVol*getMolarMass() + " solid
         // density " + 1.0/solMolVol*getMolarMass());
 
-        SolidFug = getx() * liquidPhaseFugacity * Math.exp(-getHeatOfFusion() / (R * phase1.getTemperature())
-                * (1.0 - phase1.getTemperature() / getTriplePointTemperature())
-                + deltaCpSL / (R * phase1.getTemperature()) * (getTriplePointTemperature() - phase1.getTemperature())
-                - deltaCpSL / R * Math.log(getTriplePointTemperature() / phase1.getTemperature())
-                - deltaSolVol * (1.0 - phase1.getPressure()) / (R * phase1.getTemperature()));
+        SolidFug = getx() * liquidPhaseFugacity
+                * Math.exp(-getHeatOfFusion() / (R * phase1.getTemperature())
+                        * (1.0 - phase1.getTemperature() / getTriplePointTemperature())
+                        + deltaCpSL / (R * phase1.getTemperature())
+                                * (getTriplePointTemperature() - phase1.getTemperature())
+                        - deltaCpSL / R
+                                * Math.log(getTriplePointTemperature() / phase1.getTemperature())
+                        - deltaSolVol * (1.0 - phase1.getPressure())
+                                / (R * phase1.getTemperature()));
 
         // System.out.println("solidfug " + SolidFug);
         fugasityCoeffisient = SolidFug / (phase1.getPressure() * getx());
@@ -99,8 +129,16 @@ public class ComponentSolid extends ComponentSrk {
         return fugasityCoeffisient;
     }
 
+    /**
+     * <p>
+     * fugcoef.
+     * </p>
+     *
+     * @param temp a double
+     * @param pres a double
+     * @return a double
+     */
     public double fugcoef(double temp, double pres) {
-
         if (Math.abs(Hsub) < 0.000001) {
             CCequation = false;
         }
@@ -124,7 +162,7 @@ public class ComponentSolid extends ComponentSrk {
 
         soldens = getPureComponentSolidDensity(temp) * 1000;
         // System.out.println("solid density " + soldens);
-//            if(soldens>2000)
+        // if(soldens>2000)
         soldens = 1000.0;
         solvol = 1.0 / soldens * getMolarMass();
         // System.out.println("molmass " + getMolarMass());
@@ -141,62 +179,85 @@ public class ComponentSolid extends ComponentSrk {
         // System.out.println("Pvap solid " + SolidFug);
         dfugdt = Math.log(PvapSoliddT * Math.exp(solvol / (R * temp) * (pres - PvapSolid))) / pres;
         fugasityCoeffisient = SolidFug / pres;
-//        } else{
-//            fugasityCoeffisient = 1e5;
-//            dfugdt=0;
-//        }
+        // } else{
+        // fugasityCoeffisient = 1e5;
+        // dfugdt=0;
+        // }
         logFugasityCoeffisient = Math.log(fugasityCoeffisient);
         return fugasityCoeffisient;
     }
 
-//    public double dfugdt(PhaseInterface phase, int numberOfComps, double temp, double pres){
-//        if(componentName.equals("water")){
-//            // double solvol = 1.0/getPureComponentSolidDensity(getMeltingPointTemperature())*molarMass;
-//            double solvol = 1.0/(780*0.92)*getMolarMass();
-//
-//            dfugdt = Math.log((getSolidVaporPressuredT(temp)*Math.exp(solvol/(R*temp)*(pres-getSolidVaporPressure(temp))))/pres);
-//        }
-//        else if(componentName.equals("MEG")){
-//            double solvol = 1.0/getPureComponentSolidDensity(getMeltingPointTemperature())*molarMass;
-//            dfugdt = Math.log((getSolidVaporPressuredT(temp))/pres);
-//        }
-//        else if(componentName.equals("S8")){
-//            double solvol = 1.0/(1800.0)*getMolarMass();
-//            dfugdt = Math.log((getSolidVaporPressuredT(temp)*10*Math.exp(solvol/(R*temp)*(pres-getSolidVaporPressure(temp)*10)))/pres);
-//        }
-//
-//        else dfugdt=0;
-//        return dfugdt;
-//    }
-//    public double getdpdt() {
-//        return dpdt;
-//    }
+    // public double dfugdt(PhaseInterface phase, int numberOfComps, double temp, double pres){
+    // if(componentName.equals("water")){
+    // // double solvol = 1.0/getPureComponentSolidDensity(getMeltingPointTemperature())*molarMass;
+    // double solvol = 1.0/(780*0.92)*getMolarMass();
+    //
+    // dfugdt =
+    // Math.log((getSolidVaporPressuredT(temp)*Math.exp(solvol/(R*temp)*(pres-getSolidVaporPressure(temp))))/pres);
+    // }
+    // else if(componentName.equals("MEG")){
+    // double solvol = 1.0/getPureComponentSolidDensity(getMeltingPointTemperature())*molarMass;
+    // dfugdt = Math.log((getSolidVaporPressuredT(temp))/pres);
+    // }
+    // else if(componentName.equals("S8")){
+    // double solvol = 1.0/(1800.0)*getMolarMass();
+    // dfugdt =
+    // Math.log((getSolidVaporPressuredT(temp)*10*Math.exp(solvol/(R*temp)*(pres-getSolidVaporPressure(temp)*10)))/pres);
+    // }
+    //
+    // else dfugdt=0;
+    // return dfugdt;
+    // }
+    // public double getdpdt() {
+    // return dpdt;
+    // }
+    /**
+     * <p>
+     * getMolarVolumeSolid.
+     * </p>
+     *
+     * @return a double
+     */
     public double getMolarVolumeSolid() {
         return getPureComponentSolidDensity(getMeltingPointTemperature()) / molarMass;
     }
 
+    /**
+     * <p>
+     * setSolidRefFluidPhase.
+     * </p>
+     *
+     * @param phase a {@link neqsim.thermo.phase.PhaseInterface} object
+     */
     public void setSolidRefFluidPhase(PhaseInterface phase) {
         try {
-            // if((!isTBPfraction && !isPlusFraction)){
-            refPhase = phase.getClass().newInstance();
-            refPhase.setTemperature(273.0);
-            refPhase.setPressure(1.0);
-            try {
-                refPhase.addcomponent(componentName, 10.0, 10.0, 0);
-            } catch (Exception e) {
-                logger.error("error occured", e);
-                refPhase.addcomponent("methane", 10.0, 10.0, 0);
-                refPhase.getComponent("methane").setComponentName(componentName);
+            if ((!isTBPfraction && !isPlusFraction)) {
+                refPhase = phase.getClass().getDeclaredConstructor().newInstance();
+                refPhase.setTemperature(273.0);
+                refPhase.setPressure(1.0);
+                try {
+                    refPhase.addcomponent(componentName, 10.0, 10.0, 0);
+                } catch (Exception e) {
+                    logger.error("error occured", e);
+                    refPhase.addcomponent("methane", 10.0, 10.0, 0);
+                    refPhase.getComponent("methane").setComponentName(componentName);
+                }
+                refPhase.getComponent(componentName).setAtractiveTerm(
+                        phase.getComponent(componentName).getAtractiveTermNumber());
+                refPhase.init(refPhase.getNumberOfMolesInPhase(), 1, 0, 1, 1.0);
             }
-            refPhase.getComponent(componentName)
-                    .setAtractiveTerm(phase.getComponent(componentName).getAtractiveTermNumber());
-            refPhase.init(refPhase.getNumberOfMolesInPhase(), 1, 0, 1, 1.0);
-            // }
         } catch (Exception e) {
             logger.error("error occured", e);
         }
     }
 
+    /**
+     * <p>
+     * getVolumeCorrection2.
+     * </p>
+     *
+     * @return a double
+     */
     public double getVolumeCorrection2() {
         return 0.0;
     }
