@@ -1,20 +1,5 @@
 /*
- * Copyright 2018 ESOL.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-/*
- * PHflash.java
+ * calcIonicComposition.java
  *
  * Created on 8. mars 2001, 10:56
  */
@@ -25,30 +10,42 @@ import java.text.DecimalFormatSymbols;
 import neqsim.thermo.system.SystemInterface;
 
 /**
+ * <p>
+ * calcIonicComposition class.
+ * </p>
  *
  * @author even solbraa
- * @version
+ * @version $Id: $Id
  */
-public class calcIonicComposition extends Flash implements java.io.Serializable {
-
+public class calcIonicComposition extends Flash {
     private static final long serialVersionUID = 1000;
 
     int phaseNumber;
     String[][] resultTable = null;
 
     /**
-     * Creates new PHflash
+     * <p>
+     * Constructor for calcIonicComposition.
+     * </p>
      */
-    public calcIonicComposition() {
-    }
+    public calcIonicComposition() {}
 
+    /**
+     * <p>
+     * Constructor for calcIonicComposition.
+     * </p>
+     *
+     * @param system a {@link neqsim.thermo.system.SystemInterface} object
+     * @param phase a int
+     */
     public calcIonicComposition(SystemInterface system, int phase) {
         this.system = system;
         phaseNumber = phase;
     }
 
+    /** {@inheritDoc} */
     @Override
-	public void run() {
+    public void run() {
         resultTable = new String[system.getPhase(0).getNumberOfComponents() + 2][4];
         resultTable[0][0] = "Component";
         resultTable[0][1] = "mmol/kgSolvent";
@@ -63,36 +60,40 @@ public class calcIonicComposition extends Flash implements java.io.Serializable 
         int ionNumber = 0;
         for (int i = 0; i < system.getPhase(phaseNumber).getNumberOfComponents(); i++) {
             // if (system.getPhase(phaseNumber).getComponent(i).isIsIon()) {
-            resultTable[ionNumber + 1][0] = system.getPhase(phaseNumber).getComponent(i).getComponentName();
-            resultTable[ionNumber
-                    + 1][1] = new Double(
-                            nf.format(system.getPhase(phaseNumber).getComponent(i).getNumberOfMolesInPhase()
-                                    / (system.getPhase(phaseNumber).getComponent("water").getNumberOfMolesInPhase()
-                                            * system.getPhase(phaseNumber).getComponent("water").getMolarMass())
-                                    * 1000)).toString();
-            resultTable[ionNumber + 1][2] = new Double(
-                    nf.format(system.getPhase(phaseNumber).getComponent(i).getNumberOfMolesInPhase()
-                            * system.getPhase(phaseNumber).getComponent(i).getMolarMass()
-                            / (system.getPhase(phaseNumber).getComponent("water").getNumberOfMolesInPhase()
-                                    * system.getPhase(phaseNumber).getComponent("water").getMolarMass())
-                            * 1e6)).toString();
-            resultTable[ionNumber + 1][3] = new Double(nf.format(system.getPhase(phaseNumber).getActivityCoefficient(i,
-                    system.getPhase(phaseNumber).getComponent("water").getComponentNumber()))).toString();
+            resultTable[ionNumber + 1][0] =
+                    system.getPhase(phaseNumber).getComponent(i).getComponentName();
+            resultTable[ionNumber + 1][1] = Double.valueOf(nf.format(system.getPhase(phaseNumber)
+                    .getComponent(i).getNumberOfMolesInPhase()
+                    / (system.getPhase(phaseNumber).getComponent("water").getNumberOfMolesInPhase()
+                            * system.getPhase(phaseNumber).getComponent("water").getMolarMass())
+                    * 1000)).toString();
+            resultTable[ionNumber + 1][2] = Double.valueOf(nf.format(system.getPhase(phaseNumber)
+                    .getComponent(i).getNumberOfMolesInPhase()
+                    * system.getPhase(phaseNumber).getComponent(i).getMolarMass()
+                    / (system.getPhase(phaseNumber).getComponent("water").getNumberOfMolesInPhase()
+                            * system.getPhase(phaseNumber).getComponent("water").getMolarMass())
+                    * 1e6)).toString();
+            resultTable[ionNumber + 1][3] = Double
+                    .valueOf(
+                            nf.format(system.getPhase(phaseNumber)
+                                    .getActivityCoefficient(i, system.getPhase(phaseNumber)
+                                            .getComponent("water").getComponentNumber())))
+                    .toString();
 
             ionNumber++;
-
             // }
         }
-
     }
 
+    /** {@inheritDoc} */
     @Override
-	public org.jfree.chart.JFreeChart getJFreeChart(String name) {
+    public org.jfree.chart.JFreeChart getJFreeChart(String name) {
         return null;
     }
 
+    /** {@inheritDoc} */
     @Override
-	public String[][] getResultTable() {
+    public String[][] getResultTable() {
         return resultTable;
     }
 }
